syntax = "proto3";

package cdr;

option go_package = "github.com/satimoto/go-ocpi-api/ocpirpc";

service CdrService {
  rpc CdrCreated(CdrCreatedRequest) returns (CdrCreatedResponse);
};

message CdrCreatedRequest { string cdr_uid = 1; };

message CdrCreatedResponse {};
